<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/LinearLayoutCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#333333"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TituloCadastrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"            
            android:gravity="center"
            android:text="@string/tituloCadastrar"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView 
      
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/LinearLayoutLogin">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinearLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/CadastrarNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:hint="@string/hint_CadastrarNome" 
             />

        <EditText
            android:id="@+id/CadastrarEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_CadastrarEmail"            
            android:inputType="textEmailAddress" />
        <requestFocus />

        <EditText
            android:id="@+id/CadastrarSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_CadastrarSenha" >

            
        </EditText>

        <EditText
            android:id="@+id/CadastrarTel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:inputType="phone"
            android:hint="@string/hint_CadastrarTel" />

        <EditText
            android:id="@+id/idVoucherEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_CadastrarEndereco"
            android:inputType="textPostalAddress" />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contatoMSG"
            android:layout_marginBottom="30dp"
            android:background="#333333"
            android:text="@string/btCadastrar"
            android:textColor="#FFFFFF" />

        

    </LinearLayout>

    </ScrollView>

</LinearLayout>
