<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    

    <LinearLayout
        android:id="@+id/LinearLayoutContato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ff4500"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TituloContato"
            android:layout_width="match_parent"
            android:layout_height="50dp"            
            android:gravity="center"
            android:text="@string/tituloContato"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView 
      
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/LinearLayoutContato">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinearLayoutContato"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/idCadastrese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/textViewEntreContato"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textStyle="bold"
            android:textColor="#ff9c00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/contatoNome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_ContatoNome"
            
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/contatoEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_ContatoEmail"
            
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/contatoMSG"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_ContatoMSG"
            
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btContatoEnviarEmail"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contatoMSG"
            android:layout_marginBottom="25dp"
            android:background="#ff4500"
            android:textColor="#FFFFFF"
            android:text="@string/btContatoEnviarEmail" />

    </LinearLayout>

    </ScrollView>
</RelativeLayout>
