<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <LinearLayout
        android:id="@+id/LinearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ff4500"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/TituloLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"            
            android:gravity="center"
            android:text="@string/tituloLogin"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView 
      
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/LinearLayoutLogin">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LinearLayoutLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_LoginEmail"            
            android:inputType="textEmailAddress" />
        <requestFocus />

        <EditText
            android:id="@+id/loginSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:hint="@string/hint_LoginSenha" >

            
        </EditText>

        <Button
            android:id="@+id/btAcessar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contatoMSG"
            android:layout_marginBottom="30dp"
            android:background="#ff4500"
            android:text="@string/btLogin"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/idCadastrese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:text="@string/textoCadastrese" />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
