<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.projeto.encontreoferta.MainActivity" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        
        >
      
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  
        android:layout_below="@+id/scroll"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/principalCategoria"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/linearLayout1"
            android:background="#ff9c00"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/principalCategoria"
            android:textSize="22dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/principalQuesomos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/principalCategoria"
            android:text="@string/principalTop10"
            android:background="#fc652d"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/principalContato"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/principalQuesomos"
            android:text="@string/principalContato"
            android:background="#ff4500"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/principalLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/principalContato"
            android:text="@string/principalLogin"
            android:background="#f4f4f4"
            android:textColor="#ff9c00"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="22dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    
    </ScrollView>
</RelativeLayout>