<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <LinearLayout
        android:id="@+id/LinearLayoutInformaticaDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff9c00"
        android:gravity="fill_horizontal"
        android:orientation="horizontal" >

       
        <TextView
            android:id="@+id/tituloProdutoSelecionado"
            android:layout_width="match_parent"
            android:layout_height="50dp"            
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:gravity="center"
            />

    </LinearLayout>

     <ScrollView 
      
      android:id="@+id/scroll" 
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@+id/LinearLayoutInformaticaDescricao"
      android:scrollbars="none">
        
     <LinearLayout
         android:id="@+id/LinearLayoutInformatica"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/LinearLayoutInformaticaDescricao"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
         android:orientation="vertical" >
        
         <TextView
             android:id="@+id/idTituloProduto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/LinearLayoutInformatica"
             android:layout_marginTop="5dp"
             android:text="Teste"
             android:textSize="18sp"
             android:textStyle="bold"
             android:gravity="center" />

        <ImageView
            android:id="@+id/idImagemProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idTituloProduto"
            android:layout_marginTop="10dp"
            
            />
        
        <TextView
            android:id="@+id/idDescricaoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idImagemProduto"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="TExto aqui" />
        
        
        <TextView
            android:id="@+id/btGerarVoucher"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/idInformarticaMostrarVoucher"
            android:background="#ff9c00"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/btGerarVoucher" />

        <EditText
            android:id="@+id/enviarEmailVoucher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btGerarVoucher"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/hint_EnviarVoucherEmail"
            
            android:inputType="textEmailAddress" >

            <requestFocus />
            
        </EditText>
        
        <TextView
            android:id="@+id/btEnviarVoucherEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/CadastrarEndereco"
            android:background="#ff9c00"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/btEnviarVoucher" />

     </LinearLayout>

     </ScrollView>
</RelativeLayout>
